objects/Case_Status_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CaseStatusTrackers</relationshipLabel>
        <relationshipName>CaseStatusTrackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_3rd_Party__c</fullName>
        <label>Number of Times in 3rd Party</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_IN_PROGRESS__c</fullName>
        <label>Number of Times in IN PROGRESS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_OPEN_TO_WORK__c</fullName>
        <label>Number of Times in OPEN TO WORK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_PENDING_VENDOR_ACTION__c</fullName>
        <label>Number of Times in PENDING VENDOR ACTION</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_Pending_Database__c</fullName>
        <label>Number of Times in Pending Database</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_Pending_Partner__c</fullName>
        <label>Number of Times in Pending Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in_Pending_Tech_Support__c</fullName>
        <label>Number of Times in Pending Tech Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_in__c</fullName>
        <label>Number of Times in OPEN TO WORK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_times_in_MONITOR_ACTION__c</fullName>
        <label>Number of times in MONITOR ACTION</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_times_in_Pending_other_SPWR__c</fullName>
        <label>Number of times in Pending other SPWR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numer_of_Times_in_Pending_Customer__c</fullName>
        <label>Numer of Times in Pending Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_In_Progress__c</fullName>
        <description>Updated from 4,0 to 16,2 per Sangita - CASE#: 00448706 - JT 1/5/2015</description>
        <label>Time In In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Monitoring_Action__c</fullName>
        <label>Time In Monitoring Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Open_to_Work__c</fullName>
        <label>Time In Open to Work</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Pending_3rd_Party__c</fullName>
        <label>Time In Pending 3rd Party</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Pending_Customer_Action__c</fullName>
        <label>Time In Pending Customer Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Pending_Database_action__c</fullName>
        <label>Time In Pending Database action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Pending_Partner_Action__c</fullName>
        <label>Time In Pending Partner Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Pending_Technical_Support_Action__c</fullName>
        <label>Time In Pending Technical Support Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_In_Pending_Vendor_Action__c</fullName>
        <label>Time In Pending Vendor Action</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_outside_Sunpower__c</fullName>
        <formula>(Time_In_Pending_Partner_Action__c + Time_In_Pending_Customer_Action__c + Time_In_Pending_3rd_Party__c + Time_In_Pending_Vendor_Action__c + Time_In_Monitoring_Action__c)/60/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent outside Sunpower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_with_Sunpower__c</fullName>
        <formula>(Time_In_Open_to_Work__c+Time_In_In_Progress__c+Time_in_Pending_other__c+ Time_In_Pending_Database_action__c + Time_In_Pending_Technical_Support_Action__c)/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent with Sunpower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Pending_other__c</fullName>
        <label>Time in Pending other SPWR Team Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Status Tracking</label>
    <listViews>
        <fullName>Service_Request_TSE_Germany_Case_Status_Tracking</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Request TSE Germany</label>
        <queue>Service_Request_TSE_Germany</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Case Status Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseStatusTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>